maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:11: error: method isDirectionFree has return statement; needs result type
		return false
                ^Escaper:13: error: method isDirectionFree has return statement; needs result type
	return true
        ^